--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <body>
   <!-- Background layer -->
   <div style="
-    background: url('saiyapic.png') no-repeat center center fixed;
+    background: url(https://github.com/user-attachments/assets/7b5740f7-6c95-4b2d-9c5f-6a24f0900fcd) no-repeat center center fixed;
     background-size: cover;
     position: fixed;
     top: 0;
