--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -95,7 +95,7 @@
   <div class="top-bar">
   <div class="button-row">
     <button onclick="history.back()">← Back</button>
-    <a href="saiyasda.html" class="home-button">🏠 Home</a>
+    <a href="index.html" class="home-button">🏠 Home</a>
   </div>
   <h1 class="title">UNVEIL VOL. I</h1>
 </div>
