--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -155,43 +155,44 @@
 </head>
 <body>
     <!-- Giveaway Section with images side by side -->
-    <div class="section row">
-      <div class="half">
-        <img src="SAAN.png" alt="Saan by Maki Inspo" />
-      </div>
-      <div class="half">
-        <img src="CHBM.png" alt="Could have been me" />
-      </div>
-            <div class="half">
-        <img src="HWP.png" alt="Heavenworth" />
-      </div>
-            <div class="half">
-        <img src="IGF TIXA.png" alt="W3GG x IGF" />
-      </div>
-          <div class="half">
-        <img src="META POST.png" alt="W3GG x IGF" />
-      </div>
-      <div class="half">
-        <img src="GAP6.jpg" alt="W3GG x IGF" />
-      </div>
-      <div class="half">
-        <img src="AWSPH.png" alt="W3GG x IGF" />
-      </div>
-      <div class="half">
-        <img src="AWSPCU.jpg" alt="W3GG x IGF" />
-      </div>
+   <div class="section row">
+  <div class="half">
+    <img src="https://github.com/user-attachments/assets/f94d3df3-dfe4-4b5e-b31b-622388c6da9c" alt="Saan by Maki Inspo" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/CHBM.png" alt="Could have been me" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/HWP.png" alt="Heavenworth" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/IGF_TIXA.png" alt="W3GG x IGF" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/META_POST.png" alt="Meta Post" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/GAP6.jpg" alt="GAP6" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/AWSPH.png" alt="AWS PH" />
+  </div>
+  <div class="half">
+    <img src="https://yourdomain.com/images/AWSPCU.jpg" alt="AWS PCU" />
+  </div>
+</div>
       
        <!-- Background layer -->
-    <div style="
-        background: url('websitebg.png') no-repeat center center fixed;
-       background-size: cover;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-       height: 100%;
-       z-index: -1;">
-    </div>
+   <div style="
+    background: url('https://github.com/user-attachments/assets/36db1203-9004-48d1-81bf-9127bd81be76') no-repeat center center fixed;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;">
+  </div>
     
     </div>
 
