--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -163,19 +163,19 @@
     <img src="https://yourdomain.com/images/CHBM.png" alt="Could have been me" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/HWP.png" alt="Heavenworth" />
+    <img src="https://github.com/user-attachments/assets/88317782-29c7-44ee-9910-0da4ca962053" alt="Heavenworth" />
   </div>
   <div class="half">
     <img src="https://yourdomain.com/images/IGF_TIXA.png" alt="W3GG x IGF" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/META_POST.png" alt="Meta Post" />
+    <img src="https://github.com/user-attachments/assets/82446d38-d5ff-4845-ab0c-4761aac1ca27" alt="Meta Post" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/GAP6.jpg" alt="GAP6" />
+    <img src="https://github.com/user-attachments/assets/c96c47cf-16f3-4bc9-a518-4ac2783b2239" alt="GAP6" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/AWSPH.png" alt="AWS PH" />
+    <img src="https://github.com/user-attachments/assets/de382211-fd3a-4a48-9ba5-a8d0c7732715" alt="AWS PH" />
   </div>
   <div class="half">
     <img src="https://yourdomain.com/images/AWSPCU.jpg" alt="AWS PCU" />
