--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -166,7 +166,7 @@
     <img src="https://github.com/user-attachments/assets/88317782-29c7-44ee-9910-0da4ca962053" alt="Heavenworth" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/IGF_TIXA.png" alt="W3GG x IGF" />
+    <img src="https://github.com/user-attachments/assets/96072007-9320-4782-8502-122797a2f75a" alt="W3GG x IGF" />
   </div>
   <div class="half">
     <img src="https://github.com/user-attachments/assets/82446d38-d5ff-4845-ab0c-4761aac1ca27" alt="Meta Post" />
@@ -178,7 +178,7 @@
     <img src="https://github.com/user-attachments/assets/de382211-fd3a-4a48-9ba5-a8d0c7732715" alt="AWS PH" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/AWSPCU.jpg" alt="AWS PCU" />
+    <img src="https://github.com/user-attachments/assets/7387df70-1dd5-4116-99aa-418430336b49" alt="AWS PCU" />
   </div>
 </div>
       
