--- a/Potraits.html
+++ b/Potraits.html
@@ -157,16 +157,16 @@
     <!-- Giveaway Section with images side by side -->
     <div class="section row">
       <div class="half">
-        <img src="JAKE2.png" alt="JAKE" />
+        <img src="https://github.com/user-attachments/assets/ede7bb18-76fb-4a20-919e-ee058fb8577a" alt="JAKE" />
       </div>
       <div class="half">
-        <img src="SAIYAH.png" alt="JAKE" />
+        <img src="https://github.com/user-attachments/assets/5a2c52a9-22b7-456c-8842-20912faec843" alt="JAKE" />
       </div>
             <div class="half">
-        <img src="JAKE.png" alt="SAIYA" />
+        <img src="https://github.com/user-attachments/assets/bed02dab-4e06-47ce-b018-3611540cc60d" alt="SAIYA" />
       </div>
             <div class="half">
-        <img src="HYUNJIN.png" alt="HYUNJIN" />
+        <img src="https://github.com/user-attachments/assets/13c59867-ea4d-4121-9452-5d5a1f589d30" alt="HYUNJIN" />
       </div>
        <!-- Background layer -->
     <div style="
