--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -160,7 +160,7 @@
     <img src="https://github.com/user-attachments/assets/f94d3df3-dfe4-4b5e-b31b-622388c6da9c" alt="Saan by Maki Inspo" />
   </div>
   <div class="half">
-    <img src="https://yourdomain.com/images/CHBM.png" alt="Could have been me" />
+    <img src="https://github.com/user-attachments/assets/3c2d7eb4-f2a6-486c-8472-e057b0182f7f" alt="Could have been me" />
   </div>
   <div class="half">
     <img src="https://github.com/user-attachments/assets/88317782-29c7-44ee-9910-0da4ca962053" alt="Heavenworth" />
