--- a/AboutSaiya.html
+++ b/AboutSaiya.html
@@ -194,7 +194,7 @@
       </div>
 
       <div class="text-right">
-        <img src= (https://github.com/user-attachments/assets/36db1203-9004-48d1-81bf-9127bd81be76) alt="The artist">
+        <img src= "https://github.com/user-attachments/assets/36db1203-9004-48d1-81bf-9127bd81be76" alt="The artist">
       </div>
     </div>
       <!-- Background layer -->
