--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -150,7 +150,7 @@
     <!-- Header Section -->
     <div class="header">
       <h1 style="text-align: center; font-size: 5rem; margin-top: 2rem; margin-bottom: 0%;">Graphic Design</h1>
-      <p class="section-title" style="text-align: center; font-size: 2rem; margin-bottom: 2rem; margin-top: 0">This is some of my works in organizations, company and passion projects</p>
+      <p class="section-title" style="text-align: center; font-size: 2rem; margin-bottom: 2rem; margin-top: 0">These are some of my works for organizations, companies, and passion projects.</p>
     </div>
 </head>
 <body>
