--- a/Potraits.html
+++ b/Potraits.html
@@ -170,7 +170,7 @@
       </div>
        <!-- Background layer -->
     <div style="
-        background: no-repeat center center fixed;
+        background: url('https://github.com/user-attachments/assets/36db1203-9004-48d1-81bf-9127bd81be76') no-repeat center center fixed;
        background-size: cover;
         position: fixed;
         top: 0;
