--- a/Potraits.html
+++ b/Potraits.html
@@ -150,7 +150,7 @@
     <!-- Header Section -->
     <div class="header">
       <h1 style="text-align: center; font-size: 5rem; margin-top: 2rem; margin-bottom: 0%;">Portraits</h1>
-      <p class="section-title" style="text-align: center; font-size: 2rem; margin-bottom: 2rem; margin-top: 0">This is where I started as an artist</p>
+      <p class="section-title" style="text-align: center; font-size: 2rem; margin-bottom: 2rem; margin-top: 0">This is where I began my journey as an artist</p>
     </div>
 </head>
 <body>
