--- a/AboutSaiya.html
+++ b/AboutSaiya.html
@@ -187,10 +187,10 @@
         <p>Howdy, my name is Josiah! Also known as sai/saiya. I was once a shy art kid and lost my path too many times, but I still find my way back. Come with me as I face the world and pursue my dream of being a well-known artist!</p>
 
         <h2>THE PURSUIT OF HAPPINESS!</h2>
-        <p>Happiness alone cannot explain how I feel about my program, which is Bachelor in Multimedia Arts. I enjoy what I do, and it reflects on me. Along with my fellow classmates, I'm gaining proper and basic knowledge that will help us solidify our fundamentals as art students. Learn how to draw, create effective graphic designs, animations, and more. There are challenges in the program, but there's nothing to be afraid of. I'm grateful for the new experiences and uncomfortable phases I'm going through; they show that we're evolving every day.</p>
+        <p>Happiness alone cannot fully capture how I feel about my program, the Bachelor in Multimedia Arts. I genuinely enjoy what I do, and it shows in my work. Together with my classmates, I’m gaining essential knowledge that helps us strengthen our fundamentals as art students — learning how to draw, create impactful graphic designs, produce animations, and much more. While the program presents its challenges, there’s nothing to fear. I’m grateful for the new experiences and the uncomfortable phases I’m facing; they remind me that we are growing and evolving every day.</p>
 
         <h2>THE PURSUIT OF DREAMS!</h2>
-        <p>Believe in yourself and pursue art! In today's world, opportunities for artists are everywhere. From my own experience, a lot of doors have opened since I joined the program, and I'm really grateful for it. However, it does stop there; I still need to hone my skills because practice makes progress, right? My advise, when in doubt, simply TRUST THE PROCESS. Being an art student is awsome, so come, join and sit with us in art world!</p>
+        <p>Believe in yourself and pursue art! In today’s world, opportunities for artists are everywhere. From my own experience, many doors have opened since I joined the program, and I’m truly grateful for that. However, it doesn’t stop there — I still need to sharpen my skills because practice makes progress, right? My advice is this: when in doubt, SIMPLY TRUST THE PROCESS.</p>
       </div>
 
       <div class="text-right">
